src/test/ui/associated-types/associated-types-bound-failure.stderr
error[E0277]: the trait bound `<G as GetToInt>::R: ToInt` is not satisfied
  --> $DIR/associated-types-bound-failure.rs:17:5
   |
LL |     ToInt::to_int(&g.get())
   |     ^^^^^^^^^^^^^ the trait `ToInt` is not implemented for `<G as GetToInt>::R`
   |
   = help: consider adding a `where <G as GetToInt>::R: ToInt` bound
note: required by `ToInt::to_int`
  --> $DIR/associated-types-bound-failure.rs:4:5
   |
LL |     fn to_int(&self) -> isize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
